--- a/A2/Makefile
+++ b/A2/Makefile
@@ -6,9 +6,10 @@ clean:
 	rm y.tab.c
 	rm y.tab.h
 	rm a.out
+	rm y.output
 
 y.tab.c: yacc.y
-	yacc -d yacc.y
+	yacc -dv yacc.y
 
 lex.yy.c: lex.l
 	lex lex.l
