--- a/A4/Makefile
+++ b/A4/Makefile
@@ -1,7 +1,5 @@
-SUPPORT = support.o
-
-a.out: main.c y.tab.o lex.yy.o support.o
-	cc $@ $^
+a.out: y.tab.o lex.yy.o print.o support.o main.o
+	cc -o $@ $^
 
 clean:
 	rm lex.yy.c
@@ -17,6 +15,9 @@ y.tab.c: yacc.y
 lex.yy.c: lex.l
 	lex lex.l
 
+print.o: print.c
+	cc -c $^
+
 support.o: support.c
 	cc -c $^
 
@@ -24,4 +25,7 @@ y.tab.o: y.tab.c
 	cc -c $^
 
 lex.yy.o: lex.yy.c
+	cc -c $^
+
+main.o: main.c
 	cc -c $^
